# Smallet

./: .envrc  .eslintignore  .eslintrc.cjs  .mocharc.cjs  .prettierignore  Anchor.toml  Dockerfile  README.md  flake.nix  package.json
.github/workflows/: programs-e2e.yml  programs-unit.yml
programs/smallet/: Cargo.toml
programs/smallet/src/: events.rs  lib.rs  state.rs  validators.rs
programs/smallet/src/instructions/: approve.rs  unapprove.rs
programs/soulboundsigner/: Cargo.toml
programs/soulboundsigner/src/: lib.rs
scripts/: parse-idls.sh
src/: constants.ts  sdk.ts
src/idls/: smallet.ts  soulbound_signer.ts
src/programs/: index.ts  smallet.ts
src/wrappers/smallet/: index.ts  pda.ts  types.ts
tests/: README.md  smallet.spec.ts  test-key.json  workspace.ts
